comments from reviewers

--- a/wsc16paper.tex
+++ b/wsc16paper.tex
@@ -118,13 +118,13 @@ Batavia, IL, 60510, USA\\
 \maketitle
 
 \section*{ABSTRACT}
-The Large Hadron Collider (LHC) at CERN in Geneva, Switzerland, is one of the largest machines on this planet. It is built to smash protons into each other at unprecedented energies to reveal the fundamental constituents of our universe. The 4 detectors at the LHC record multi-Petabyte datasets every year. The scientific analysis of this data requires equally large simulation datasets of the collisions based on the theory of particle physics, the Standard Model. The goal is to verify the validity of the Standard Model or of theories that extend the Model like the concepts of Super Symmetry and an explanation of Dark Matter. I will give an overview of the nature of simulations needed to discover new particles like the Higgs Boson in 2012, and review the different areas where simulations are indispensable: from the actual recording of the collisions to the extraction of scientific results to the conceptual design of improvements to the LHC and its experiments.
+The Large Hadron Collider (LHC) at CERN in Geneva, Switzerland, is one of the largest machines on this planet. It is built to smash protons into each other at unprecedented energies to reveal the fundamental constituents of our universe. The 4 detectors at the LHC record multi-petabyte datasets every year. The scientific analysis of this data requires equally large simulation datasets of the collisions based on the theory of particle physics, the Standard Model. The goal is to verify the validity of the Standard Model or of theories that extend the Model like the concepts of Super Symmetry and an explanation of Dark Matter. I will give an overview of the nature of simulations needed to discover new particles like the Higgs boson in 2012, and review the different areas where simulations are indispensable: from the actual recording of the collisions to the extraction of scientific results to the conceptual design of improvements to the LHC and its experiments.
 
 \section{INTRODUCTION}
 \label{sec:intro}
 High Energy Physics (HEP) strives to develop a detailed mathematical understanding of nature at the elementary level. It is founded on the interplay between a theoretical framework that describes elementary particles and elementary forces between them, and the experimental detection of particles and measurements of their interactions.
 
-The Standard Model~\shortcite{griffiths2008introduction} contains the current proven and verified knowledge of particle physics and describes the universe through 12 particles and their anti-particles, and 4 fundamental forces represented by force particles(see Fig.~\ref{fig:sm}). Particles are called fermions and have half-integer spins (one of fundamental properties or quantum numbers of particles) and respect the Pauli exclusion principle (not two particles can be identical in all their quantum numbers). There are 12 fermions, separated into 6 leptons (electron, electron neutrino, muon, muon neutrino, tau, tau neutrino), and 6 quarks (up, down, charm, strange, bottom, top). The hydrogen atom consists of an electron orbiting a proton, which consist of 2 up and 1 down quark.
+The Standard Model~\shortcite{griffiths2008introduction} contains the current proven and verified knowledge of particle physics and describes the universe through 12 particles and their anti-particles, and 4 fundamental forces represented by force particles~(see Fig.~\ref{fig:sm}). Particles are called fermions and have half-integer spin (1/2, 3/2, 5/2, ...; one of the fundamental properties or quantum numbers of particles) and respect the Pauli exclusion principle (no two particles can be identical in all their quantum numbers). There are 12 fermions, separated into 6 leptons (electron, electron neutrino, muon, muon neutrino, tau, tau neutrino), and 6 quarks (up, down, charm, strange, bottom, top). The hydrogen atom consists of an electron orbiting a proton, which consist of 2 up and 1 down quark.
 
 \begin{figure}[htb]
 {
@@ -135,14 +135,14 @@ The Standard Model~\shortcite{griffiths2008introduction} contains the current pr
 }
 \end{figure}
 
-Force particles are bosons with integer spin and describe the fundamental forces: the electro-magnetic force is represented by the photon, the weak force is represented by the W and Z bosons, the strong force is represented by the gluon. The recently discovered Higgs Boson~\shortcite{cms_higgs_discovery} is already regarded part of the Standard Model and completes it by explaining why elementray particle shave mass. Gravitation is not included in the Standard Model. It is the least well understood force on elemntary level, the suspected force particle is called the graviton and has not yet been discovered.
+Force particles are bosons with integer spin and describe the fundamental forces: the electro-magnetic force is represented by the photon, the weak force is represented by the W and Z bosons, the strong force is represented by the gluon. The recently discovered Higgs boson~\shortcite{cms_higgs_discovery} is already regarded part of the Standard Model and completes it by explaining why elementary particles have mass. Gravitation is not included in the Standard Model. It is the least well understood force on an elementary level; the suspected force particle is called the graviton and has not yet been discovered.
 
-Today, the Standard Model is very successful in describing matter and their interactions. It took many years and numerous experiments to develop and verify the theory. Although it is self-consistent from the theory point of view, it cannot describe gravitation as mentioned, it cannot account for the accelerating expansion of the universe, and cannot explain neutrinos masses. Therefore the field of particle physics is very active in understanding these and other topics and improve and enhance the Standard Model.
+Today, the Standard Model is very successful in describing matter and their interactions. It took many years and numerous experiments to develop and verify the theory. Although it is self-consistent from the theory point of view, it cannot describe gravitation as mentioned, it cannot account for the accelerating expansion of the universe, and cannot explain neutrinos' masses. Therefore the field of particle physics is very active in trying to understand these and other topics and to improve and enhance the Standard Model.
 
 \section{SIMULATION}
 \label{sec:simulation}
 
-The Standard Model is based Quantum Field Theory Caluclations~\shortcite{peskin1995introduction} to mathematically describe particles and their interactions. The rules of particle physics are governed by quantum mechanics~\shortcite{feynman1990q}. To deduce fundamental laws of how particles interact, experimental observables have to be translated to properties that the theory can calculate. The comparison of experiment and theory has to take into account the statitical nature of the predictions. Averaging over many measurements of the same type of interaction is necessary to make statistically significant statements. Simulation is needed in all steps of the scientific process to verify and enhance the Standard Model.
+The Standard Model is based on Quantum Field Theory Caluclations~\shortcite{peskin1995introduction} to mathematically describe particles and their interactions. The rules of particle physics are governed by quantum mechanics~\shortcite{feynman1990q}. To deduce fundamental laws of how particles interact, experimental observables have to be translated to properties that the theory can calculate. The comparison of experiment and theory has to take into account the statistical nature of the predictions. Averaging over many measurements of the same type of interaction is necessary to make statistically significant statements. Simulation is needed in all steps of the scientific process to verify and enhance the Standard Model.
 
 \subsection{EVENT SIMULATION} 
 \label{subsec:eventsimulation}
@@ -151,26 +151,26 @@ The empirical calculation of a particle interaction is only possible in approxim
 
 Higher order corrections can play a significant role in calculating this collision accurately. There are two kinds of higher order corrections that are important. 
 
-The first is extending the number of particles and force particles that are produced and exchanged between the first and second vertex. In particle physics nomenclature, the number of vertices is increased and therefore the order of the calculation increases. The more orders are calculated, the closer the approximation of the calculation to the truth. The first order described above is called the "leading order (LO)" and the next following orders are called "next-to-leader order (NLO)" and "next-to-next-to-leading order (NNLO)". NNLO calculations are currently state-of-the-art in particle physics for most processes.
+The first is extending the number of particles and force particles that are produced and exchanged between the first and second vertex. In particle physics nomenclature, the number of vertices is increased and therefore the order of the calculation increases. The more orders are calculated, the closer the approximation of the calculation to the truth. The first order described above is called the "leading order (LO)" and the next following orders are called ''next-to-leader order (NLO)'' and ''next-to-next-to-leading order (NNLO)''. NNLO calculations are currently state-of-the-art in particle physics for most processes.
 
-The second kind of higher order correction can only be approximated ebacuse of lack of fundamental understanding of the involved processes. Additional force particles radiated from the incoming or outgoing particles are changing the calculation. As there are many possibilities to radiate extra particles with a wide range of possible kinematical parameters (energy, momentum, etc.), a precise or even mathematical approximation is very difficult. Particle physics uses Monte Carlo techniques to approximate these effects. A sufficiently large number of interactions is calculated starting from a random number seed, where every simulated interaction is using a different seed. The random number is used to determine if and how particles are radiated and included in the calculation. Probability density functions are used to constrain the possibilities of radiating particles. These functions are determined by theory confirmed by experiment or by experiment directly.
+The second kind of higher order correction can only be approximated because of lack of fundamental understanding of the involved processes. Additional force particles radiated from the incoming or outgoing particles are changing the calculation. As there are many possibilities to radiate extra particles with a wide range of possible kinematical parameters (energy, momentum, etc.), a precise or even mathematical approximation is very difficult. Particle physics uses Monte Carlo techniques to approximate these effects. A sufficiently large number of interactions is calculated starting from a random number seed, where every simulated interaction is using a different seed. The random number is used to determine if and how particles are radiated and included in the calculation. Probability density functions are used to constrain the possibilities of radiating particles. These functions are determined by theory confirmed by experiment or by experiment directly.
 
-A sufficiently large statistics of these simulated interactions allows to make statistically significant statements about the interaction of interest, including kinematic distributions of the final state, through averaging the results. Sufficiently large statistics means that the phase space of allowed configurations is sufficiently covered.
+A sufficiently large sample set of these simulated interactions allows to make statistically significant statements about the interaction of interest, including kinematic distributions of the final state, through averaging the results. Sufficiently large statistics means that the phase space of allowed configurations is sufficiently covered.
 
 \subsection{DETECTOR SIMULATION} 
 \label{subsec:detectorsimulation}
 
 To verify or even extend the theory, experiments and the comparison of experimental results with theoretical predictions are needed. The event simulation step described in Sec.~\ref{subsec:eventsimulation} is not directly comparable with measurements of an experimental setup, because only few elementary particles are stable and also detectable in their elementary form.
 
-Of the leptons, only the electron and muon are stable and observable. The tau is decaying into electrons or muons very quickly and the neutrinos are so weakly interacting that neutrino physics is its own branch in particle physics. 
+Of the leptons, only the electron and muon are stable and observable. The tau decays into electrons or muons very quickly and the neutrinos are so weakly interacting that neutrino physics is its own branch in particle physics. 
 
-The quarks are not observable individually at all. Governed by the strong force and a concept called confinement~\shortcite{PhysRevD.10.2445}, quarks can only be observed in 2 or 3 quark bound states. 3 quark bound states are called baryons and the most prominent examples are protons and neutrons. 2 quark bound states are called mesons. 
+The quarks are not observable individually at all. Governed by the strong force and a concept called confinement~\shortcite{PhysRevD.10.2445}, quarks can only be observed in 2- or 3-quark bound states. 3-quark bound states are called baryons and the most prominent examples are protons and neutrons. 2-quark bound states are called mesons. 
 
-We also cannot control the initial state of a particle interaction to all extend. If we collide for example protons with protons, two 3-quark states are colliding, giving multiple possibilities how a quark from the first proton is interacting with a quark form the second proton. Also these effects can be simulated using Monte Carlo techniques.
+We also cannot control the initial state of a particle interaction to all extent. If we collide for example protons with protons, two 3-quark states are colliding, giving multiple possibilities how a quark from the first proton is interacting with a quark form the second proton. Also these effects can be simulated using Monte Carlo techniques.
 
-The same effect that binds quarks in mesons and baryons also governs the constitution of the final state of an interaction. Because individual quarks cannot exist on their own, quarks that are produced in an interaction hadronize by collecting additional quarks from the vacuum (spontaneous quark anti-quark production following $E=mc~2$) or from neighboring quarks in the final state of the interaction. Hadronization is described as well with the help of Monte Carlo techniques using underlying models and theories. The same is true for particles that fragment or decay while transversing a detector material.
+The same effect that binds quarks in mesons and baryons also governs the constitution of the final state of an interaction. Because individual quarks cannot exist on their own, quarks that are produced in an interaction collect additional quarks from the vacuum (spontaneous quark anti-quark production following $E=mc~2$) or from neighboring quarks in the final state of the interaction. This is called hadronization and is described as well with the help of Monte Carlo techniques using underlying models and theories. The same is true for particles that fragment or decay while transversing a detector material.
 
-Detectors are made of matter and detect particles by mesureing the interaction of particles with their active material. Detectors can consists of a gas that is ionized by particles, or a plastic that produces light when a particle transverses the material, or a semi-conductor in which a current can be measured when a particle is passing through. In a single simulated event, we know the final state of an interaction. We can track a particle flying through a detector and we can calculate the amount of energy deposited by the particle in the various materials of the detector. We encapsulated all theories and models to describe the energy depositions of particles in material in a single package that is used also outside particle physics, called Geant~\shortcite{Agostinelli2003250,1610988}. Geant simulates the energy deposition of a particle in material, depending on the type of material, the amount of material and the three-dimensional composition of various materials that make up a detector or detector system. 
+Detectors are made of matter and detect particles by measuring the interaction of particles with their active material. Detectors can consists of a gas that is ionized by particles, or a plastic that produces light when a particle transverses the material, or a semi-conductor in which a current can be measured when a particle is passing through. In a single simulated event, we know the final state of an interaction. We can track a particle flying through a detector and we can calculate the amount of energy deposited by the particle in the various materials of the detector. We encapsulated all theories and models to describe the energy depositions of particles in material in a single package called Geant~\shortcite{Agostinelli2003250,1610988}, that is used also outside particle physics. Geant simulates the energy deposition of a particle in material, depending on the type of material, the amount of material and the three-dimensional composition of various materials that make up a detector or detector system. 
 
 The last part of the detector simulation step translates the energy depositions of the particles simulated by Geant into electrical signals of the used detectors and detector systems. After this step, a simulated interaction and an experimentally recorded interaction with a detector are equivalent.
 
@@ -198,13 +198,13 @@ The Large Hadron Collider (LHC)~\shortcite{1748-0221-3-08-S08001} is the current
 \begin{figure}[htb]
 {
    \centering
-   \includegraphics[width=0.50\textwidth]{lhc}
+   \includegraphics[width=0.60\textwidth]{lhc}
    \caption{Drawing of the Large Hadron Collider (LHC) at CERN in Geneva, Switzerland.
    \label{fig:lhc}}
 }
 \end{figure}
 
-The CMS collaboration built, maintains and operates the CMS detector~\shortcite{cms_detector}. CMS stands for "Compact Muon Solenoid", describing the main feature of the compact architecture of the detector system and the emphasis on muon detection of this 14,000 t detector. In the innermost layer surrounding the collision region, a silicon pixel detector is detecting charged particle trajectories. Pixel detectors are a three-dimensional array of digital camera CMOS chips specifically manufactured to withstand the high data rates and radiation backgrounds from particle collisions of the LHC. Pixel detectors have a very good spatial resolution, needed to detect individual particles which have not yet separated significantly while traveling outwards after the collision. The pixel tracker is surrounded by a silicon strip tracker which has a courser resolution but increases the leverage arm of the track reconstruction (forming tracks from individual 3-dimensional hits). Surrounding the tracking systems is the electro-magnetic calorimeter built from lead-tungsten crystals. The crystals are transparent and produce light proportional to the energy of a passing particle. Completing the calorimetry is the hadronic calorimeter, a sandwich of brass and scintillators to stop hadrons and to measure the penetration depth which is proportional to the energy of the hadrons. The tracking and calorimeter systems are surrounded by a superconducting solenoid producing a magnetic field of 3.8T. With its solenoid size of 6 times 13 meters, it is the largest and most powerful magnet of its kind. Completing the CMS detector is the muon detector system surrounding the magnet instrumenting its return yoke. A drawing of the CMS detector is shown in Fig.~\ref{fig:cms}.
+The CMS collaboration built, maintains and operates the CMS detector~\shortcite{cms_detector}. CMS stands for ''Compact Muon Solenoid'', describing the main feature of the compact architecture of the detector system and the emphasis on muon detection of this 14,000 tons detector. In the innermost layer surrounding the collision region, a silicon pixel detector is detecting charged particle trajectories. Pixel detectors are a three-dimensional array of digital camera CMOS chips specifically manufactured to withstand the high data rates and radiation backgrounds from particle collisions of the LHC. Pixel detectors have a very good spatial resolution, needed to detect individual particles which have not yet separated significantly while traveling outwards after the collision. The pixel tracker is surrounded by a silicon strip tracker which has a coarser resolution but increases the leverage arm of the track reconstruction (forming tracks from individual 3-dimensional hits). Surrounding the tracking systems is the electro-magnetic calorimeter built from lead-tungsten crystals. The crystals are transparent and produce light proportional to the energy of a passing particle. Completing the calorimetry is the hadronic calorimeter, a sandwich of brass and scintillators to stop hadrons and to measure the penetration depth which is proportional to the energy of the hadrons. The tracking and calorimeter systems are surrounded by a superconducting solenoid producing a magnetic field of 3.8T. With its solenoid size of 6 times 13 meters, it is the largest and most powerful magnet of its kind. Completing the CMS detector is the muon detector system surrounding the magnet instrumenting its return yoke. A drawing of the CMS detector is shown in Fig.~\ref{fig:cms}.
 
 \begin{figure}[htb]
 {
@@ -216,18 +216,18 @@ The CMS collaboration built, maintains and operates the CMS detector~\shortcite{
 \end{figure}
 
 
-Not all collisions of the 40 MHz collision rate are being recorded and saved for analysis. Most of the collisions can be identified quickly as un-interesting events where the physics is well understood. Also the total data rate and subsequent data volume would be about 1 PB every minute if all of the collisions are recorded. CMS uses a multi level trigger system to identify collisions for physics analysis. The first level is implemented in custom-made electronics and reduces the data rate to 100 KHz. All detector components have buffers to allow the level 1 decision to be taken within 3 micro-seconds. For selected events, the signals of all detector components are read out and combined into a single event, which is then passed on to the high level trigger. The high level trigger consists of a dedicated compute farm at the detector pit that performs a streamlined version of the full event reconstruction. The high level trigger compute farm is dimensioned to sustain an output rate of 1 kHz and an average reconstruction time per event of 200 milliseconds, currently amounting to 22k compute cores. A trigger decision is taken according to the reconstructed information and the events are sent for offline processing, storage and analysis.
+Not all collisions of the 40 MHz collision rate are being recorded and saved for analysis. Most of the collisions can be identified quickly as un-interesting events where the physics is well understood. Also the total data rate and subsequent data volume would be about 1 PB every minute if all of the collisions are recorded. CMS uses a multi level trigger system to identify collisions for physics analysis. The first level is implemented in custom-made electronics and reduces the data rate to 100 KHz. All detector components have buffers to allow the level 1 decision to be taken within 3 micro-seconds. For selected events, the signals of all detector components are read out and combined into a single event, which is then passed on to the high level trigger. The high level trigger consists of a dedicated computer farm at the detector pit that performs a streamlined version of the full event reconstruction. The high level trigger farm is dimensioned to sustain an output rate of 1 kHz and an average reconstruction time per event of 200 milliseconds, currently amounting to 22k computer cores. A trigger decision is taken according to the reconstructed information and the events are sent for offline processing, storage and analysis.
 
 Simulations are used in all stages of designing and maintaining the trigger. Starting from the physics program, first and high level trigger selections are designed to maximize the recording of interesting events. These selections are then optimized to fit within the latencies of the trigger levels and the timing is checked. Constant feedback from the actual data recording is needed to improve the trigger simulation and the final trigger event selection for physics.
 
 \section{PHYSICS WITH THE CMS EXPERIMENT}
 \label{sec:physics}
 
-There are two main thrusts in particle physics, improving the Standard Model and its predictive power and finding physics that is not yet described by the Standard Model. The latter category of physics Beyond the Standard Model (BSM) would allow to solve question about the composition of the universe and the existence of the concept of the grand unified theory (GUT). It is known from cosmological observations that the universe consists only to about 4\% of ordinary matter as the Standard Model describes. About 20\% is assumed to be Dark Matter, matter that does not interact electro-magnetically, and about 75\% is assumed to be Dark Energy. Dark Matter particles would be invisible and therefore not detectable in particle physics detectors. But theories predict that at LHC collision energies, Dark Matter particles can be produced under certain circumstances and would manifest themselves in deviations from the Standard Model. The same is true for the concept of Supersymmetry, which doubles the elementary particles to give every particle its super-partner. Supersymmetry would solve the fine-tuning problem in the Standard Model and would also allow for all three forces, electro-magnetic, weak and strong, to unify at high energies and be described by the same simple mathematical construct. This would bring us closer to the Grand Unified Theory of particle physics. Supersymmetric particles would also be a good candidate for Dark Matter.
+There are two main thrusts in particle physics, improving the Standard Model and its predictive power and finding physics that is not yet described by the Standard Model. The latter category of physics Beyond the Standard Model (BSM) would allow to solve the question about the composition of the universe and the existence of the concept of the grand unified theory (GUT). It is known from cosmological observations that the universe consists only of about 4\% of ordinary matter as the Standard Model describes. About 20\% is assumed to be Dark Matter, matter that does not interact electro-magnetically, and about 75\% is assumed to be Dark Energy. Dark Matter particles would be invisible and therefore not detectable in particle physics detectors. But theories predict that at LHC collision energies, Dark Matter particles can be produced under certain circumstances and would manifest themselves in deviations from the Standard Model. The same is true for the concept of Supersymmetry, which doubles the elementary particles to give every particle its super-partner. Supersymmetry would solve the fine-tuning problem in the Standard Model and would also allow for all three forces, electro-magnetic, weak and strong, to unify at high energies and be described by the same simple mathematical construct. This would bring us closer to the Grand Unified Theory of particle physics. Supersymmetric particles would also be a good candidate for Dark Matter.
 
 In all cases the comparison of experimental observation to the deductions of the Standard Model are crucial to find deviations. These deviations can then be interpreted in the context of theoretical models like Dark Matter or Supersymmetry and probabilities can be assigned to deviation being compatible with certain theories.
 
-In the case of the Higgs Boson discovery in 2012, theory predicted a number of final states where the new particle was most likely to be discovered. One of them was the 4-lepton final state~\shortcite{cms_higgs_discovery}. Measuring 4-lepton events and identifying and suppressing as much as possible already known interactions predicted by the Standard Model, a peak was discovered that could not be explained by the Standard Model. But adding a Higgs Boson with a mass of about 125 GeV allowed the data to be described by the simulation (see Fig.~\ref{fig:higgs}). The statistical significance of the description exceeded 5 sigma and the signal qualified for the discovery of a Higgs Boson at 125 GeV. Simulations played a crucial role in this discovery.
+In the case of the Higgs boson discovery in 2012, theory predicted a number of final states where the new particle was most likely to be discovered. One of them was the 4-lepton final state~\shortcite{cms_higgs_discovery}. Measuring 4-lepton events and identifying and suppressing as much as possible already known interactions predicted by the Standard Model, a peak was discovered that could not be explained by the Standard Model. But adding a Higgs boson with a mass of about 125 GeV allowed the data to be described by the simulation (see Fig.~\ref{fig:higgs}). The statistical significance of the description exceeded 5 sigma and the signal qualified for the discovery of a Higgs boson at 125 GeV. Simulations played a crucial role in this discovery.
 
 \begin{figure}[htb]
 {
@@ -241,7 +241,7 @@ In the case of the Higgs Boson discovery in 2012, theory predicted a number of f
 \section{COMPUTING FOR THE CMS EXPERIMENT}
 \label{sec:computing}
 
-Producing all the required simulated events is a massive undertaking for the CMS collaboration. Billion's of events need to be simulated and reconstructed to enable all of the currently about 500 publications of CMS. The time to simulate and reconstruct a complete event is a couple of minutes, depending on the run conditions of the LHC. In the current running period, CMS needs over 140k compute cores to fulfill all simulation and reconstruction needs. CMS uses over 70 computing centers world-wide (see Fig.~\ref{fig:grid}), transparently interconnected through a GRID infrastructure established in the first running period of the LHC~\shortcite{Adelman2013raa}. In the current and next periods, this infrastructure will be enhanced using private and commercial cloud providers and the supercomputers of DOE ASCR and NSF.
+Producing all the required simulated events is a massive undertaking for the CMS collaboration. Billions of events need to be simulated and reconstructed to enable all of the currently about 500 publications of CMS. The time to simulate and reconstruct a complete event is a couple of minutes, depending on the run conditions of the LHC. In the current running period, CMS needs over 140k compute cores to fulfill all simulation and reconstruction needs. CMS uses over 70 computing centers world-wide (see Fig.~\ref{fig:grid}), transparently interconnected through a GRID infrastructure established in the first running period of the LHC~\shortcite{Adelman2013raa}. In the current and next periods, this infrastructure will be enhanced using private and commercial cloud providers and the supercomputers of the U.S. Department of Energy's (DOE) Advanced Scientific Computing Research (ASCR) division and the National Science Foundation (NSF).
 
 \begin{figure}[htb]
 {
@@ -287,7 +287,7 @@ I would like to thank my colleagues of the CMS collaboration to have built, main
 
 \section*{AUTHOR BIOGRAPHIES}
 
-\noindent {\bf Oliver Gutsche} is a staff scientist at the Fermi National Accelerator Laboratory and member of the CMS collaboration of 2,500 physicists, which is operating one of the 4 detectors at the Large Hadron Collider (LHC) at CERN in Geneva, Switzerland. After the Higgs Boson discovery in 2012, his research is focusing on new physics beyond the established theory of particle physics called the Standard Model, especially in the areas of Super Symmetry and Dark Matter. In his role as Assistant Head of the Scientific Computing Division, Dr. Gutsche coordinates the computing needs of the High Energy, Neutrino and Muon Particle Physics experiments at the laboratory. He has intimate knowledge of the large scale computing solutions used for the LHC experiments to analyze multi-Petabyte size datasets on distributed computing infrastructures of many 100,000 cores, having architected many of the used systems and leading the computing operations team of CMS during the first running period of the LHC. His email address is \email{gutsche@fnal.gov}.\\
+\noindent {\bf Oliver Gutsche} is a staff scientist at the Fermi National Accelerator Laboratory and member of the CMS collaboration of 2,500 physicists, which is operating one of the 4 detectors at the Large Hadron Collider (LHC) at CERN in Geneva, Switzerland. After the Higgs boson discovery in 2012, his research is focusing on new physics beyond the established theory of particle physics called the Standard Model, especially in the areas of Super Symmetry and Dark Matter. In his role as Assistant Head of the Scientific Computing Division, Dr. Gutsche coordinates the computing needs of the High Energy, Neutrino and Muon Particle Physics experiments at the laboratory. He has intimate knowledge of the large scale computing solutions used for the LHC experiments to analyze multi-petabyte size datasets on distributed computing infrastructures of many 100,000 cores, having architected many of the used systems and leading the computing operations team of CMS during the first running period of the LHC. His email address is \email{gutsche@fnal.gov}.\\
 
 
 \end{document}
